--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -88,6 +86,7 @@
 
     <script src="js/loading.js"></script>
     <script src="js/sliderButton.js"></script>
+    <script src="oturumKontrol.js"></script>
 
 
 </body>
