--- a/kurumsal.html
+++ b/kurumsal.html
@@ -22,40 +22,40 @@
 </div> 
 
 <header>
-        <div class="container">
-            <div class="logo">
-                <a href="index.php" ><img src="images/BGK.png" alt="BGK Logo"></a>
-            </div>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.php">Anasayfa</a>
-                    </li>
-                    <li>
-                        <a href="programs.php">Programlar</a>
-                    </li>
-                    <li>
-                        <a href="education.php">Eğitim</a>
-                    </li>
-                    <li>
-                        <a href="galeri.php">Galeri</a>
-                    </li>
-                    <li>
-                        <a href="about.php">Hakkımızda</a>
-                    </li>
-                    <li>
-                        <a href="iletisim.php">İletişim</a>
-                    </li>
-                    <li>
-                        <a href="cikis.php" class="cikis">Çıkış Yap</a>
-                    </li>
-                    <li class="kurumsal-icon">
-                        <a href="kurumsal.php"><img src="images/kurumsal.png" class="icon-white"></a>
-                    </li>
-                </ul>
-            </nav>
+    <div class="container">
+        <div class="logo">
+            <a href="index.html"><img src="images/BGK.png" alt="BGK Logo"></a>
         </div>
-    </header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Anasayfa</a>
+                </li>
+                <li>
+                    <a href="programs.html">Programlar</a>
+                </li>
+                <li>
+                    <a href="education.html">Eğitim</a>
+                </li>
+                <li>
+                    <a href="galeri.html">Galeri</a>
+                </li>
+                <li>
+                    <a href="about.html">Hakkımızda</a>
+                </li>
+                <li>
+                    <a href="iletisim.html">İletişim</a>
+                </li>
+            </li>
+            <li><a href="#" class="cikis" onclick="cikisYap()">Çıkış Yap</a>
+            </li>
+                <li class="kurumsal-icon">
+                <a href="kurumsal.html"><img src="images/kurumsal.png" class="icon-white"></a>
+            </li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
 
 
@@ -95,6 +95,8 @@
 
 <script src="js/loading.js"></script>
 <script src="oturumKontrol.js"></script>
+<script src="cikis.js"></script>
+
 
 
 
