--- a/index.html
+++ b/index.html
@@ -26,28 +26,27 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="index.php">Anasayfa</a>
+                            <a href="index.html">Anasayfa</a>
                         </li>
                         <li>
-                            <a href="programs.php">Programlar</a>
+                            <a href="programs.html">Programlar</a>
                         </li>
                         <li>
-                            <a href="education.php">Eğitim</a>
+                            <a href="education.html">Eğitim</a>
                         </li>
                         <li>
-                            <a href="galeri.php">Galeri</a>
+                            <a href="galeri.html">Galeri</a>
                         </li>
                         <li>
-                            <a href="about.php">Hakkımızda</a>
+                            <a href="about.html">Hakkımızda</a>
                         </li>
                         <li>
-                            <a href="iletisim.php">İletişim</a>
+                            <a href="iletisim.html">İletişim</a>
                         </li>
-                        <li>
-                            <a href="cikis.php" class="cikis">Çıkış Yap</a>
+                        <li><a href="#" class="cikis" onclick="cikisYap()">Çıkış Yap</a>
                         </li>
                         <li class="kurumsal-icon">
-                        <a href="kurumsal.php"><img src="images/kurumsal.png" class="icon-white"></a>
+                        <a href="kurumsal.html"><img src="images/kurumsal.png" class="icon-white"></a>
                     </li>
                     </ul>
                 </nav>
@@ -62,10 +61,10 @@
                 Geniş kitlelere ulaşırız. Şubelerimiz, BGK Danışmanlık Merkezlerimiz, gönüllülerimiz ve Ülke BGK
                 topluluğumuz ile toplumun her kesiminde ve tüm yaşam alanlarında varız.
             </p>
-            <button onclick="window.location.href='programs.php';">
+            <button onclick="window.location.href='programs.html';">
                 Bağış Yap
             </button>
-            <button onclick="window.location.href='programs.php';" id="bagis">
+            <button onclick="window.location.href='programs.html';" id="bagis">
                 Gönüllü Ol
             </button>
 
@@ -87,6 +86,8 @@
     <script src="js/loading.js"></script>
     <script src="js/sliderButton.js"></script>
     <script src="oturumKontrol.js"></script>
+    <script src="cikis.js"></script>
+
 
 
 </body>
