--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <div class="container">
                 <div class="logo">
-                    <a href="index.php"><img src="images/BGK.png" alt="BGK Logo"></a>
+                    <a href="index.html" ><img src="images/BGK.png" alt="BGK Logo"></a>
                 </div>
                 <nav>
                     <ul>
@@ -43,15 +43,38 @@
                         <li>
                             <a href="iletisim.html">İletişim</a>
                         </li>
-                        <li><a href="#" class="cikis" onclick="cikisYap()">Çıkış Yap</a>
-                        </li>
-                        <li class="kurumsal-icon">
-                        <a href="kurumsal.html"><img src="images/kurumsal.png" class="icon-white"></a>
+                    </li>
+                    <li><a href="#" class="cikis" onclick="cikisYap()">Çıkış Yap</a>
                     </li>
                     </ul>
                 </nav>
             </div>
         </header>
+        
+        <div class="newbar">
+                <nav>
+                    <ul>
+                    <li class="kurumsal-icon">
+                            <a href="index.html"><img src="images/ilerleme.png" class="icon-white"></a>
+                        </li>
+                        <li class="kurumsal-icon">
+                            <a href="yorumlar.html"><img src="images/yorum.png" class="icon-white"></a>
+                        </li>
+                        <li class="kurumsal-icon">
+                            <a href="gonullulukForm.html"><img src="images/form2.png" class="icon-white"></a>
+                        </li>
+                        <li class="kurumsal-icon">
+                            <a href="takvim.html"><img src="images/takvim.png" class="icon-white"></a>
+                        </li>
+                        <li class="kurumsal-icon">
+                            <a href="sss.html"><img src="images/sss.png" class="icon-white"></a>
+                        </li>
+                        <li class="kurumsal-icon">
+                            <a href="kurumsal.html"><img src="images/kurumsal.png" class="icon-white"></a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
 
       
 
