--- a/sss.html
+++ b/sss.html
@@ -114,15 +114,15 @@
 
 </div>
 
-    <footer class="main-footer">
-        <p class="cptext">&copy; 2024 Company BGK. All rights reserved.</p>
-            
-        <ul>
-            <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
-        </ul>
-    </footer>
+<footer class="main-footer">
+    <p class="cptext">&copy; 2024 Company BGK. All rights reserved.</p>
+
+    <ul class="fa-brands">
+        <li class="instagram"><a href=""><img src="images/instagram.png" alt="Instagram"></a></li>
+        <li class="twitter"><a href=""><img src="images/x.png" alt="Twitter"></a></li>
+        <li class="wp"><a href=""><img src="images/wp.png" alt="WhatsApp"></a></li>
+    </ul>
+</footer>
     
     <script src="js/loading.js"></script>
     <script src="js/sliderButton.js"></script>
