--- a/giris.html
+++ b/giris.html
@@ -195,11 +195,11 @@
 
         <div class="inputGroup inputGroup1">
             <label for="loginEmail" id="loginEmailLabel">Kullanıcı Adı</label>
-            <input type="text" id="username" name="username" />
+            <input type="text" id="username" name="username" placeholder="emircan" />
         </div>
         <div class="inputGroup inputGroup2">
             <label for="loginPassword" id="loginPasswordLabel">Şifre</label>
-            <input type="password" id="password" name="password"/>
+            <input type="password" id="password" name="password" placeholder="123" />
             <label id="showPasswordToggle" for="showPasswordCheck">Şifreyi Göster
                 <input id="showPasswordCheck" type="checkbox" />
                 <div class="indicator"></div>
